--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -118,6 +118,7 @@ blockquote {
     margin-bottom: 5px;
     margin-top: 5px;
     font-family: monospace;
+    font-size: 18px;
 
     p {
       display: inline-block;
